--- a/playbooks/configurar_red_mint_jhonatan.yml
+++ b/playbooks/configurar_red_mint_jhonatan.yml
@@ -1,138 +1,64 @@
 ---
 # Playbook para configurar red inicial en mint_jhonatan
-# Ejecutar con: ansible-playbook -c local -i localhost, playbooks/configurar_red_mint_jhonatan.yml
+# Ejecutar con: ansible-playbook -c local -i localhost, playbooks/configurar_red_mint_jhonatan.yml --become-method=sudo -K
 
-- name: 💻 Configuración inicial de red - mint_jhonatan (ejecutar EN mint_jhonatan)
+- name: 💻 Configuración de red - mint_jhonatan
   hosts: localhost
   become: yes
   connection: local
-  gather_facts: yes
+  gather_facts: no
   
   vars:
-    # Interfaz correcta según ip addr show
-    lan_interface: "ens34"  # Interfaz para la red local del laboratorio
+    ansible_python_interpreter: /usr/bin/python3
+    lan_interface: "ens34"
     
   tasks:
-    - name: Mostrar interfaces disponibles
-      ansible.builtin.command: ip link show
-      register: interfaces
+    - name: 🔧 Configurar Python interpreter
+      raw: which python3 || which python
+      register: python_path
       changed_when: false
       
-    - name: 📋 Interfaces detectadas
-      ansible.builtin.debug:
-        var: interfaces.stdout_lines
-        
-    - name: 🧹 LIMPIAR COMPLETAMENTE la interfaz ens34
-      ansible.builtin.shell: |
-        # Bajar la interfaz
+    - name: 🧹 Limpiar ens34
+      raw: |
         ip link set ens34 down 2>/dev/null || true
-        # Limpiar cualquier IP asignada
         ip addr flush dev ens34 2>/dev/null || true
-        # Eliminar todas las conexiones de NetworkManager en ens34
         nmcli connection show | grep ens34 | awk '{print $1}' | xargs -r nmcli connection delete 2>/dev/null || true
-        # Subir la interfaz limpia
         ip link set ens34 up 2>/dev/null || true
-      register: cleanup_ens34
-      
-    - name: 📋 Resultado de limpieza ens34
-      ansible.builtin.debug:
-        var: cleanup_ens34.stdout_lines
         
-    - name: Detectar distribución
-      ansible.builtin.set_fact:
-        is_mint: "{{ 'mint' in ansible_distribution|lower or 'ubuntu' in ansible_distribution|lower }}"
-        
-    - name: Instalar NetworkManager si no está (Mint/Ubuntu)
-      ansible.builtin.apt:
-        name: network-manager
-        state: present
-        update_cache: yes
-      when: is_mint
+    - name: 📦 Instalar NetworkManager
+      raw: apt update && apt install -y network-manager
       
-    - name: Asegurar NetworkManager está corriendo
-      ansible.builtin.systemd:
-        name: NetworkManager
-        state: started
-        enabled: yes
-        
-    - name: Eliminar conexiones existentes que puedan conflictuar
-      ansible.builtin.command: nmcli connection delete "{{ item }}"
-      loop:
-        - "lan-dhcp"
-        - "Wired connection 1"
-        - "Wired connection 2"
-      failed_when: false
-      changed_when: false
+    - name: 🔌 Activar NetworkManager
+      raw: systemctl enable --now NetworkManager
       
-    - name: 🌐 Configurar interfaz LAN para recibir DHCP
-      ansible.builtin.command: >-
-        nmcli connection add type ethernet 
-        ifname {{ lan_interface }} 
-        con-name lan-dhcp 
-        ipv4.method auto 
-        connection.autoconnect yes
-      register: lan_config
-      failed_when: lan_config.rc != 0 and 'already exists' not in lan_config.stderr
+    - name: 🌐 Configurar ens34 para DHCP del laboratorio
+      raw: nmcli connection add type ethernet ifname ens34 con-name lan-dhcp ipv4.method auto connection.autoconnect yes
       
     - name: 🔌 Activar conexión LAN
-      ansible.builtin.command: nmcli connection up lan-dhcp
-      register: lan_up
-      failed_when: false
+      raw: nmcli connection up lan-dhcp
       
-    - name: Esperar a que DHCP asigne IP
-      ansible.builtin.wait_for:
-        timeout: 15
-        
+    - name: ⏱️ Esperar DHCP
+      raw: sleep 10
+      
     - name: 🔄 Renovar DHCP si es necesario
-      ansible.builtin.command: dhclient -r {{ lan_interface }} && dhclient {{ lan_interface }}
-      failed_when: false
+      raw: dhclient -r ens34 && dhclient ens34
       
-    - name: 📊 Verificar configuración de ens34
-      ansible.builtin.command: ip addr show ens34
-      register: ens34_config
-      changed_when: false
+    - name: 🔑 Activar SSH
+      raw: systemctl enable --now ssh
       
-    - name: 📋 Mostrar configuración de ens34
-      ansible.builtin.debug:
-        var: ens34_config.stdout_lines
-      
-    - name: 📊 Verificar configuración resultante
-      ansible.builtin.command: ip addr show
-      register: final_config
-      changed_when: false
-      
-    - name: 📋 Configuración final de red
-      ansible.builtin.debug:
-        var: final_config.stdout_lines
-        
-    - name: 🔍 Verificar IP asignada
-      ansible.builtin.command: ip -4 addr show {{ lan_interface }}
-      register: ip_check
-      changed_when: false
+    - name: 📊 Verificar ens34
+      raw: ip addr show ens34
+      register: ens34_result
       
     - name: 🌐 Verificar conectividad con gateway
-      ansible.builtin.command: ping -c 3 192.168.50.1
-      register: ping_gateway
+      raw: ping -c 3 192.168.50.1
+      register: ping_result
       failed_when: false
-      changed_when: false
       
-    - name: 📡 Resultado del ping
-      ansible.builtin.debug:
-        var: ping_gateway.stdout_lines
-        
-    - name: 🔑 Asegurar SSH está activo
-      ansible.builtin.systemd:
-        name: ssh
-        state: started
-        enabled: yes
-        
-    - name: 🎯 Mostrar resultado
-      ansible.builtin.debug:
+    - name: ✅ Mostrar resultado
+      debug:
         msg: |
-          ✅ Configuración de mint_jhonatan completada:
-          - Interfaz {{ lan_interface }} configurada para DHCP
-          - Conectividad con gateway: {{ 'OK' if ping_gateway.rc == 0 else 'ERROR' }}
+          mint_jhonatan configurada:
+          - ens34: DHCP habilitado ({{ ens34_result.stdout | regex_search('inet [0-9.]+') | default('IP pendiente') }})
+          - Gateway: {{ 'OK' if ping_result.rc == 0 else 'ERROR' }}
           - SSH: Activo
-          
-          🔥 Si tienes IP asignada, puedes conectarte desde la VM de control:
-          ssh jhonatan@[IP_ASIGNADA]
