--- a/roles/procesos_servicios/tasks/main.yml
+++ b/roles/procesos_servicios/tasks/main.yml
@@ -8,8 +8,9 @@
     state: started
     enabled: yes
   loop:
-    - ssh
-    - cron
+    - sshd  # Corregido: usar sshd en lugar de ssh
+    - crond  # Corregido: usar crond en lugar de cron (Fedora)
+  ignore_errors: yes  # Ignorar errores si algunos servicios no existen
     - systemd-logind
   tags: servicios
 
