🔒 Implementación completa de laboratorio de seguridad - Nivel 4 académico
✨ Nuevas características implementadas:

🛡️ Seguridad Integral:
- Roles de seguridad local (ClamAV antivirus)
- Protección contra amenazas (Fail2Ban IDS/IPS)
- Prácticas seguras de usuario y políticas
- Sistema de auditoría AUDITD
- Verificación de integridad AIDE

🔧 Configuración del Sistema:
- Inventario convertido a formato YAML limpio
- Variables de seguridad organizadas (security.yml)
- Ansible Vault con templates seguros
- Firewall con configuración avanzada

📚 Documentación Completa:
- Guías de implementación de seguridad
- Instrucciones de uso de Ansible Vault
- Reportes automáticos de cumplimiento académico
- Scripts de configuración automatizada

🎯 Cumplimiento Académico:
- Unidad 2: Nivel 4/4 - Configuración de red avanzada
- Unidad 3: Nivel 4/4 - Seguridad integral del sistema
- Playbook principal de seguridad orquestado
- Templates de reportes de cumplimiento

🚀 Listo para evaluación y demostración académica

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,11 +1,25 @@
+
 [defaults]
-inventory = inventory/hosts.yml
+# Default inventory used by the repository
+inventory = ./inventory/hosts.yml
+
+# Where roles live in this repo
 roles_path = ./roles
+
+# Disable host key checking for local lab environments
 host_key_checking = False
+
+# Optional: caching facts to a local json file (helps speed up repeated runs)
+fact_caching = jsonfile
+fact_caching_connection = ./tmp
+
+# Do not create retry files in this lab repo
 retry_files_enabled = False
 
-# Don't set a vault password file here; prefer using prompt or environment in CI
-# vault_password_file = ~/.ansible_vault_pass
-
+# SSH connection tuning
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s
+pipelining = True
+
+# Note: Do not set a vault password file here; prefer using prompt or environment in CI
+# vault_password_file = ~/.ansible_vault_pass
