--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,22 +1,34 @@
-[lab_academico]
-# vm_jhonatan será el servidor de red (LAN gateway + DHCP)
-vm_jhonatan ansible_host=192.168.50.1 ansible_user=jhonatan
+---
+# 🏗️ Inventario del Laboratorio Académico - Formato YAML
+# Configuración de hosts para laboratorio de virtualización con ESXi
 
-# mint_jhonatan será un cliente de pruebas
-mint_jhonatan ansible_host=192.168.50.100 ansible_user=jhonatan
+lab_academico:
+  hosts:
+    # vm_jhonatan será el servidor de red (LAN gateway + DHCP)
+    vm_jhonatan:
+      ansible_host: 192.168.50.1
+      ansible_user: jhonatan
+      
+    # mint_jhonatan será un cliente de pruebas
+    mint_jhonatan:
+      ansible_host: 192.168.50.100
+      ansible_user: jhonatan
+      
+    # control_ansible es el nodo de control (puedes ejecutar playbooks desde aquí)
+    control_ansible:
+      ansible_host: 192.168.50.10
+      ansible_user: control
+      
+  vars:
+    # Usar become en este grupo en vez de conectarse como root directamente
+    ansible_become: true
+    ansible_become_method: sudo
 
-# control_ansible es el nodo de control (puedes ejecutar playbooks desde aquí)
-control_ansible ansible_host=192.168.50.10 ansible_user=control
-
-[lab_academico:vars]
-# Usar become en este grupo en vez de conectarse como root directamente
-ansible_become: true
-ansible_become_method: sudo
-
-[all:vars]
-# Valores por defecto - edítalos si usas claves distintas o usuarios diferentes
-ansible_ssh_private_key_file=/home/control/.ssh/id_ed25519
-ansible_python_interpreter=/usr/bin/python3
+all:
+  vars:
+    # Valores por defecto - edítalos si usas claves distintas o usuarios diferentes
+    ansible_ssh_private_key_file: /home/control/.ssh/id_ed25519
+    ansible_python_interpreter: /usr/bin/python3
 
 # Nota: Si las VMs aún no tienen IPs asignadas, usa la consola de ESXi para aplicar
 # las configuraciones de red iniciales o ejecuta los playbooks de configuración con
